[gd_scene load_steps=2 format=3 uid="uid://noyk5n0awjav"]

[ext_resource type="Script" uid="uid://d2w343e53bief" path="res://ui/stats_display.gd" id="1_agt1n"]

[node name="StatsDisplay" type="Control"]
layout_mode = 3
anchor_left = 0.074
anchor_top = 0.90300006
anchor_right = 0.074
anchor_bottom = 0.90300006
offset_left = -66.248
offset_top = -290.14404
offset_right = 360.752
offset_bottom = 48.855957
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_agt1n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.439
anchor_top = 0.809
anchor_right = 0.439
anchor_bottom = 0.809
offset_left = -122.453
offset_top = -107.25101
offset_right = 133.547
offset_bottom = 70.74899
pivot_offset = Vector2(100, 100)

[node name="HealthContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="VBoxContainer/HealthContainer"]
layout_mode = 2
text = "Health   "

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer/HealthContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="OxygenContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="OxygenLabel" type="Label" parent="VBoxContainer/OxygenContainer"]
layout_mode = 2
text = "Oxygen "

[node name="OxygenBar" type="ProgressBar" parent="VBoxContainer/OxygenContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="StaminaContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StaminaLabel" type="Label" parent="VBoxContainer/StaminaContainer"]
layout_mode = 2
text = "Stamina"

[node name="StaminaBar" type="ProgressBar" parent="VBoxContainer/StaminaContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="HungerContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HungerLabel" type="Label" parent="VBoxContainer/HungerContainer"]
layout_mode = 2
text = "Hunger "

[node name="HungerBar" type="ProgressBar" parent="VBoxContainer/HungerContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="ThirstContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ThirstLabel" type="Label" parent="VBoxContainer/ThirstContainer"]
layout_mode = 2
text = "Thirst    "

[node name="ThirstBar" type="ProgressBar" parent="VBoxContainer/ThirstContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
